--- a/Trafik-Cezasi-Yonetimi/Trafik-Cezasi-Yonetimi.csproj
+++ b/Trafik-Cezasi-Yonetimi/Trafik-Cezasi-Yonetimi.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="IOdenecek.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="IOdenecek.Designer.cs">
+      <DependentUpon>IOdenecek.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
