Tüm arayüzler, veri kayıpsız geçiş ve ortak sürücü listesi ile birlikte, enum ve interface desteği eklenerek tamamlandı.
Enum tabanlı ceza türü yapısı ve IOdenecek arayüzü güncellendi
Kullanıcı ve polis formları arası kolay geçiş sağlandı
Ortak sürücü listesiyle tüm formlar arası güncel veri paylaşımı eklendi
Ana menüden dönüşte bilgiler kaybolmuyor
Ceza ekleme/silme, ödeme ve raporlama sistemleri tamamlandı

--- a/Trafik-Cezasi-Yonetimi/Trafik-Cezasi-Yonetimi.csproj
+++ b/Trafik-Cezasi-Yonetimi/Trafik-Cezasi-Yonetimi.csproj
@@ -52,7 +52,7 @@
     <Compile Include="AnaMenu.Designer.cs">
       <DependentUpon>AnaMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="CezaTuru.cs" />
+    <Compile Include="Sınıf Dosyaları\CezaTuru.cs" />
     <Compile Include="IOdenecek.cs" />
     <Compile Include="KullaniciFormu.cs">
       <SubType>Form</SubType>
